parser/src/main/antlr4/de/luca/grammar/.antlr/StrategyParser.java
// Generated from c:/Users/lucar/Desktop/AProVe_Strategy_Visualizer_final/parser/src/main/antlr4/de/luca/grammar/StrategyParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class StrategyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		REPEAT=1, MAYBE=2, FIRST=3, DELAY=4, IF=5, COMBINE=6, TIMER=7, ANYK=8, 
		ANY=9, SOLVE=10, PROVE=11, DISPROVE=12, ITERATE=13, EQ=14, DOT=15, DECLARE=16, 
		COLON=17, SEMICOLON=18, COMMA=19, LBRA=20, RBRA=21, LSQBRA=22, RSQBRA=23, 
		STAR=24, NUMBER=25, DESCRIPTION=26, COMMENT=27, LCNAME=28, UCNAME=29, 
		WS=30, STRING=31, BACKSLASH=32;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_qualifiedName = 2, RULE_namePart = 3, 
		RULE_equation = 4, RULE_strategyTerm = 5, RULE_strategyTermList = 6, RULE_sequence = 7, 
		RULE_timer = 8, RULE_ifExpr = 9, RULE_combine = 10, RULE_solveProve = 11, 
		RULE_strategyAtom = 12, RULE_repeat = 13, RULE_iterate = 14, RULE_upperBound = 15, 
		RULE_processor = 16, RULE_parameterBlock = 17, RULE_parameterContent = 18, 
		RULE_choice = 19, RULE_maybe = 20, RULE_delay = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaration", "qualifiedName", "namePart", "equation", "strategyTerm", 
			"strategyTermList", "sequence", "timer", "ifExpr", "combine", "solveProve", 
			"strategyAtom", "repeat", "iterate", "upperBound", "processor", "parameterBlock", 
			"parameterContent", "choice", "maybe", "delay"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'Maybe'", "'First'", null, "'If'", null, null, "'AnyK'", 
			"'Any'", "'Solve'", "'Prove'", "'DISPROVE'", null, "'='", "'.'", "'declare'", 
			"':'", "';'", "','", "'('", "')'", "'['", "']'", "'*'", null, null, null, 
			null, null, null, null, "'\\'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "REPEAT", "MAYBE", "FIRST", "DELAY", "IF", "COMBINE", "TIMER", 
			"ANYK", "ANY", "SOLVE", "PROVE", "DISPROVE", "ITERATE", "EQ", "DOT", 
			"DECLARE", "COLON", "SEMICOLON", "COMMA", "LBRA", "RBRA", "LSQBRA", "RSQBRA", 
			"STAR", "NUMBER", "DESCRIPTION", "COMMENT", "LCNAME", "UCNAME", "WS", 
			"STRING", "BACKSLASH"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "StrategyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public StrategyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(StrategyParser.EOF, 0); }
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}
		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(46);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(44);
					equation();
					}
					break;
				case 2:
					{
					setState(45);
					declaration();
					}
					break;
				}
				}
				setState(48); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 335609856L) != 0) );
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(StrategyParser.DECLARE, 0); }
		public NamePartContext namePart() {
			return getRuleContext(NamePartContext.class,0);
		}
		public TerminalNode EQ() { return getToken(StrategyParser.EQ, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public List<TerminalNode> DESCRIPTION() { return getTokens(StrategyParser.DESCRIPTION); }
		public TerminalNode DESCRIPTION(int i) {
			return getToken(StrategyParser.DESCRIPTION, i);
		}
		public TerminalNode LCNAME() { return getToken(StrategyParser.LCNAME, 0); }
		public ParameterBlockContext parameterBlock() {
			return getRuleContext(ParameterBlockContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DESCRIPTION) {
				{
				{
				setState(52);
				match(DESCRIPTION);
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			match(DECLARE);
			setState(59);
			namePart();
			setState(60);
			match(EQ);
			setState(61);
			qualifiedName();
			setState(64);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(62);
				match(LCNAME);
				setState(63);
				parameterBlock();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QualifiedNameContext extends ParserRuleContext {
		public List<NamePartContext> namePart() {
			return getRuleContexts(NamePartContext.class);
		}
		public NamePartContext namePart(int i) {
			return getRuleContext(NamePartContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(StrategyParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(StrategyParser.DOT, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
	}

	public final QualifiedNameContext qualifiedName() throws RecognitionException {
		QualifiedNameContext _localctx = new QualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_qualifiedName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			namePart();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(67);
				match(DOT);
				setState(68);
				namePart();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamePartContext extends ParserRuleContext {
		public TerminalNode LCNAME() { return getToken(StrategyParser.LCNAME, 0); }
		public TerminalNode UCNAME() { return getToken(StrategyParser.UCNAME, 0); }
		public TerminalNode REPEAT() { return getToken(StrategyParser.REPEAT, 0); }
		public TerminalNode MAYBE() { return getToken(StrategyParser.MAYBE, 0); }
		public TerminalNode FIRST() { return getToken(StrategyParser.FIRST, 0); }
		public TerminalNode DELAY() { return getToken(StrategyParser.DELAY, 0); }
		public TerminalNode IF() { return getToken(StrategyParser.IF, 0); }
		public TerminalNode COMBINE() { return getToken(StrategyParser.COMBINE, 0); }
		public TerminalNode TIMER() { return getToken(StrategyParser.TIMER, 0); }
		public TerminalNode ANY() { return getToken(StrategyParser.ANY, 0); }
		public TerminalNode ANYK() { return getToken(StrategyParser.ANYK, 0); }
		public TerminalNode SOLVE() { return getToken(StrategyParser.SOLVE, 0); }
		public TerminalNode PROVE() { return getToken(StrategyParser.PROVE, 0); }
		public TerminalNode ITERATE() { return getToken(StrategyParser.ITERATE, 0); }
		public NamePartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namePart; }
	}

	public final NamePartContext namePart() throws RecognitionException {
		NamePartContext _localctx = new NamePartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_namePart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 805318654L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EquationContext extends ParserRuleContext {
		public TerminalNode LCNAME() { return getToken(StrategyParser.LCNAME, 0); }
		public TerminalNode EQ() { return getToken(StrategyParser.EQ, 0); }
		public StrategyTermContext strategyTerm() {
			return getRuleContext(StrategyTermContext.class,0);
		}
		public List<TerminalNode> DESCRIPTION() { return getTokens(StrategyParser.DESCRIPTION); }
		public TerminalNode DESCRIPTION(int i) {
			return getToken(StrategyParser.DESCRIPTION, i);
		}
		public EquationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equation; }
	}

	public final EquationContext equation() throws RecognitionException {
		EquationContext _localctx = new EquationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_equation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DESCRIPTION) {
				{
				{
				setState(76);
				match(DESCRIPTION);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(LCNAME);
			setState(83);
			match(EQ);
			setState(84);
			strategyTerm();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StrategyTermContext extends ParserRuleContext {
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public StrategyTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strategyTerm; }
	}

	public final StrategyTermContext strategyTerm() throws RecognitionException {
		StrategyTermContext _localctx = new StrategyTermContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_strategyTerm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StrategyTermListContext extends ParserRuleContext {
		public List<StrategyTermContext> strategyTerm() {
			return getRuleContexts(StrategyTermContext.class);
		}
		public StrategyTermContext strategyTerm(int i) {
			return getRuleContext(StrategyTermContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(StrategyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(StrategyParser.COMMA, i);
		}
		public StrategyTermListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strategyTermList; }
	}

	public final StrategyTermListContext strategyTermList() throws RecognitionException {
		StrategyTermListContext _localctx = new StrategyTermListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_strategyTermList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			strategyTerm();
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(89);
				match(COMMA);
				setState(90);
				strategyTerm();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SequenceContext extends ParserRuleContext {
		public List<StrategyAtomContext> strategyAtom() {
			return getRuleContexts(StrategyAtomContext.class);
		}
		public StrategyAtomContext strategyAtom(int i) {
			return getRuleContext(StrategyAtomContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(StrategyParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(StrategyParser.COLON, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(StrategyParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(StrategyParser.SEMICOLON, i);
		}
		public SequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequence; }
	}

	public final SequenceContext sequence() throws RecognitionException {
		SequenceContext _localctx = new SequenceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			strategyAtom();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLON || _la==SEMICOLON) {
				{
				{
				setState(97);
				_la = _input.LA(1);
				if ( !(_la==COLON || _la==SEMICOLON) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(98);
				strategyAtom();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TimerContext extends ParserRuleContext {
		public TerminalNode TIMER() { return getToken(StrategyParser.TIMER, 0); }
		public TerminalNode LBRA() { return getToken(StrategyParser.LBRA, 0); }
		public TerminalNode NUMBER() { return getToken(StrategyParser.NUMBER, 0); }
		public TerminalNode COMMA() { return getToken(StrategyParser.COMMA, 0); }
		public StrategyTermContext strategyTerm() {
			return getRuleContext(StrategyTermContext.class,0);
		}
		public TerminalNode RBRA() { return getToken(StrategyParser.RBRA, 0); }
		public TimerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timer; }
	}

	public final TimerContext timer() throws RecognitionException {
		TimerContext _localctx = new TimerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_timer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(TIMER);
			setState(105);
			match(LBRA);
			setState(106);
			match(NUMBER);
			setState(107);
			match(COMMA);
			setState(108);
			strategyTerm();
			setState(109);
			match(RBRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfExprContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(StrategyParser.IF, 0); }
		public ParameterBlockContext parameterBlock() {
			return getRuleContext(ParameterBlockContext.class,0);
		}
		public TerminalNode LBRA() { return getToken(StrategyParser.LBRA, 0); }
		public List<StrategyTermContext> strategyTerm() {
			return getRuleContexts(StrategyTermContext.class);
		}
		public StrategyTermContext strategyTerm(int i) {
			return getRuleContext(StrategyTermContext.class,i);
		}
		public TerminalNode RBRA() { return getToken(StrategyParser.RBRA, 0); }
		public TerminalNode COMMA() { return getToken(StrategyParser.COMMA, 0); }
		public IfExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifExpr; }
	}

	public final IfExprContext ifExpr() throws RecognitionException {
		IfExprContext _localctx = new IfExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(IF);
			setState(112);
			parameterBlock();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRA) {
				{
				setState(113);
				match(LBRA);
				setState(114);
				strategyTerm();
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(115);
					match(COMMA);
					setState(116);
					strategyTerm();
					}
				}

				setState(119);
				match(RBRA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CombineContext extends ParserRuleContext {
		public TerminalNode COMBINE() { return getToken(StrategyParser.COMBINE, 0); }
		public TerminalNode LBRA() { return getToken(StrategyParser.LBRA, 0); }
		public StrategyTermListContext strategyTermList() {
			return getRuleContext(StrategyTermListContext.class,0);
		}
		public TerminalNode RBRA() { return getToken(StrategyParser.RBRA, 0); }
		public CombineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_combine; }
	}

	public final CombineContext combine() throws RecognitionException {
		CombineContext _localctx = new CombineContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_combine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(COMBINE);
			setState(124);
			match(LBRA);
			setState(125);
			strategyTermList();
			setState(126);
			match(RBRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SolveProveContext extends ParserRuleContext {
		public TerminalNode LBRA() { return getToken(StrategyParser.LBRA, 0); }
		public StrategyTermContext strategyTerm() {
			return getRuleContext(StrategyTermContext.class,0);
		}
		public TerminalNode RBRA() { return getToken(StrategyParser.RBRA, 0); }
		public TerminalNode SOLVE() { return getToken(StrategyParser.SOLVE, 0); }
		public TerminalNode PROVE() { return getToken(StrategyParser.PROVE, 0); }
		public TerminalNode DISPROVE() { return getToken(StrategyParser.DISPROVE, 0); }
		public SolveProveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_solveProve; }
	}

	public final SolveProveContext solveProve() throws RecognitionException {
		SolveProveContext _localctx = new SolveProveContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_solveProve);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 7168L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(129);
			match(LBRA);
			setState(130);
			strategyTerm();
			setState(131);
			match(RBRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StrategyAtomContext extends ParserRuleContext {
		public RepeatContext repeat() {
			return getRuleContext(RepeatContext.class,0);
		}
		public IterateContext iterate() {
			return getRuleContext(IterateContext.class,0);
		}
		public ChoiceContext choice() {
			return getRuleContext(ChoiceContext.class,0);
		}
		public MaybeContext maybe() {
			return getRuleContext(MaybeContext.class,0);
		}
		public ProcessorContext processor() {
			return getRuleContext(ProcessorContext.class,0);
		}
		public TimerContext timer() {
			return getRuleContext(TimerContext.class,0);
		}
		public IfExprContext ifExpr() {
			return getRuleContext(IfExprContext.class,0);
		}
		public CombineContext combine() {
			return getRuleContext(CombineContext.class,0);
		}
		public SolveProveContext solveProve() {
			return getRuleContext(SolveProveContext.class,0);
		}
		public DelayContext delay() {
			return getRuleContext(DelayContext.class,0);
		}
		public TerminalNode LCNAME() { return getToken(StrategyParser.LCNAME, 0); }
		public StrategyAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strategyAtom; }
	}

	public final StrategyAtomContext strategyAtom() throws RecognitionException {
		StrategyAtomContext _localctx = new StrategyAtomContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_strategyAtom);
		try {
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REPEAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				repeat();
				}
				break;
			case ITERATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				iterate();
				}
				break;
			case FIRST:
			case ANYK:
			case ANY:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				choice();
				}
				break;
			case MAYBE:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				maybe();
				}
				break;
			case UCNAME:
				enterOuterAlt(_localctx, 5);
				{
				setState(137);
				processor();
				}
				break;
			case TIMER:
				enterOuterAlt(_localctx, 6);
				{
				setState(138);
				timer();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 7);
				{
				setState(139);
				ifExpr();
				}
				break;
			case COMBINE:
				enterOuterAlt(_localctx, 8);
				{
				setState(140);
				combine();
				}
				break;
			case SOLVE:
			case PROVE:
			case DISPROVE:
				enterOuterAlt(_localctx, 9);
				{
				setState(141);
				solveProve();
				}
				break;
			case DELAY:
				enterOuterAlt(_localctx, 10);
				{
				setState(142);
				delay();
				}
				break;
			case LCNAME:
				enterOuterAlt(_localctx, 11);
				{
				setState(143);
				match(LCNAME);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RepeatContext extends ParserRuleContext {
		public TerminalNode REPEAT() { return getToken(StrategyParser.REPEAT, 0); }
		public TerminalNode LBRA() { return getToken(StrategyParser.LBRA, 0); }
		public TerminalNode NUMBER() { return getToken(StrategyParser.NUMBER, 0); }
		public List<TerminalNode> COMMA() { return getTokens(StrategyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(StrategyParser.COMMA, i);
		}
		public UpperBoundContext upperBound() {
			return getRuleContext(UpperBoundContext.class,0);
		}
		public StrategyTermContext strategyTerm() {
			return getRuleContext(StrategyTermContext.class,0);
		}
		public TerminalNode RBRA() { return getToken(StrategyParser.RBRA, 0); }
		public RepeatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeat; }
	}

	public final RepeatContext repeat() throws RecognitionException {
		RepeatContext _localctx = new RepeatContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_repeat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(REPEAT);
			setState(147);
			match(LBRA);
			setState(148);
			match(NUMBER);
			setState(149);
			match(COMMA);
			setState(150);
			upperBound();
			setState(151);
			match(COMMA);
			setState(152);
			strategyTerm();
			setState(153);
			match(RBRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IterateContext extends ParserRuleContext {
		public TerminalNode ITERATE() { return getToken(StrategyParser.ITERATE, 0); }
		public TerminalNode LBRA() { return getToken(StrategyParser.LBRA, 0); }
		public ProcessorContext processor() {
			return getRuleContext(ProcessorContext.class,0);
		}
		public TerminalNode RBRA() { return getToken(StrategyParser.RBRA, 0); }
		public IterateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iterate; }
	}

	public final IterateContext iterate() throws RecognitionException {
		IterateContext _localctx = new IterateContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_iterate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(ITERATE);
			setState(156);
			match(LBRA);
			setState(157);
			processor();
			setState(158);
			match(RBRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UpperBoundContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(StrategyParser.NUMBER, 0); }
		public TerminalNode STAR() { return getToken(StrategyParser.STAR, 0); }
		public UpperBoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_upperBound; }
	}
